--- a/CSharpWorkshop/IssuesApp/Pages/FetchData.razor
+++ b/CSharpWorkshop/IssuesApp/Pages/FetchData.razor
@@ -8,6 +8,8 @@
 <button class="btn btn-primary" @onclick="CancelLoading2">Cancel2</button>
 
 <p>Issues count: @issues.Count</p>
+<p></p>
+<p>Opened by vsfeedback: @openedByFeedback</p>
 
 <table class="table">
     <thead>
@@ -33,6 +35,7 @@
 
 @code {
     List<Issue> issues = new List<Issue>();
+    int openedByFeedback = 0;
 
     CancellationTokenSource cts;
     CancellationTokenSource cts2;
@@ -40,6 +43,7 @@
     private async void StartLoading()
     {
         issues.Clear();
+        openedByFeedback = 0;
         cts = new CancellationTokenSource();
         cts2 = new CancellationTokenSource();
 
@@ -50,6 +54,12 @@
             await foreach (var issue in issueService.GetIssuesAsync(cts.Token).WithCancellation(cts2.Token))
             {
                 issues.Add(issue);
+
+                if (issue is { State: IssueState.Open, Author: {Login: "vsfeedback"} })
+                {
+                    openedByFeedback++;
+                }
+
                 StateHasChanged();
             }
         }
