--- a/CSharpWorkshop/IssuesApp/Pages/FetchData.razor
+++ b/CSharpWorkshop/IssuesApp/Pages/FetchData.razor
@@ -1,4 +1,5 @@
 ﻿@page "/fetchdata"
+@inject IIssueService IssueService
 
 @using System.Threading
 @using IssuesApp.Data
@@ -16,32 +17,32 @@ else
 
     <table class="table">
         <thead>
-        <tr>
-            <th>Title</th>
-            <th>Category</th>
-            <th>Author</th>
-            <th>Status</th>
-        </tr>
+            <tr>
+                <th>Title</th>
+                <th>Category</th>
+                <th>Author</th>
+                <th>Status</th>
+            </tr>
         </thead>
         <tbody>
-        @foreach (var issue in issues)
-        {
-            <tr>
-                <td style="max-width: 500px"><a href="@issue.Url" target="_blank">@issue.Title</a></td>
-                <td>@issue.Categorize()</td>
-                <td><a href="@issue.Author?.Url" target="_blank">@issue.Author?.Login</a></td>
-                <td>@(issue.State.ToString())</td>
-            </tr>
-        }
+            @foreach (var issue in issues)
+            {
+                <tr>
+                    <td style="max-width: 500px"><a href="@issue.Url" target="_blank">@issue.Title</a></td>
+                    <td>@issue.Categorize()</td>
+                    <td><a href="@issue.Author?.Url" target="_blank">@issue.Author?.Login</a></td>
+                    <td>@(issue.State.ToString())</td>
+                </tr>
+            }
         </tbody>
     </table>
 }
 
 @code {
-    IEnumerable<Issue> issues;
+    IEnumerable<Issue>? issues;
     int issuesCount;
 
-    CancellationTokenSource cts;
+    CancellationTokenSource? cts;
 
     private async void StartLoading()
     {
@@ -61,11 +62,8 @@ else
 
         try
         {
-            using (var issueService = new GitHubIssueService("dotnet", "roslyn"))
-            {
-                issues = await issueService.GetIssuesAsync(progress, cts.Token);
-                StateHasChanged();
-            }
+            issues = await IssueService.GetIssuesAsync(progress, cts.Token);
+            StateHasChanged();
         }
         catch (OperationCanceledException)
         {
@@ -74,7 +72,7 @@ else
 
     private void CancelLoading()
     {
-        cts.Cancel();
+        cts?.Cancel();
     }
 
     private class ActionProgress : IProgress<int>
