--- a/CSharpWorkshop/IssuesApp/Pages/FetchData.razor
+++ b/CSharpWorkshop/IssuesApp/Pages/FetchData.razor
@@ -50,7 +50,7 @@
 
         try
         {
-            await foreach (var issue in IssueService.GetIssuesAsync(cts.Token).WithCancellation(cts2.Token))
+            await foreach (var issue in IssueService.GetIssuesAsync("dotnet", "roslyn", cts.Token).WithCancellation(cts2.Token))
             {
                 issues.Add(issue);
 
