Inject HttpClient into service. Make owner and repo name parameters of method.

--- a/CSharpWorkshop/IssuesApp/Pages/FetchData.razor
+++ b/CSharpWorkshop/IssuesApp/Pages/FetchData.razor
@@ -62,7 +62,7 @@ else
 
         try
         {
-            issues = await IssueService.GetIssuesAsync(progress, cts.Token);
+            issues = await IssueService.GetIssuesAsync("dotnet", "roslyn", progress, cts.Token);
             StateHasChanged();
         }
         catch (OperationCanceledException)
